--- a/mhealth_stage1.ipynb
+++ b/mhealth_stage1.ipynb
@@ -1155,15 +1155,13 @@
     "\n",
     "def dscb_simple_trend(df, sensor_type, pair_list, whether_gpt=False, model_type='3.5'):\n",
     "    data_types = [\"time series data\", \"sensor data\"]\n",
-    "    prompts_templates = PROMPT_DICT[\"gen_subtrend_q\"]\n",
+    "    prompts_templates = PROMPT_DICT[\"gen_trend_q\"]\n",
     "\n",
     "    selected_data_type = random.choice(data_types)\n",
     "    selected_template = random.choice(prompts_templates)\n",
     "\n",
-    "    question = selected_template.format(data=selected_data_type,\n",
-    "                                        start_time=df[\"start_time\"].iloc[0],\n",
-    "                                        end_time=df['end_time'].iloc[-1]\n",
-    "                                        )\n",
+    "    question = selected_template.format(data=selected_data_type)\n",
+    "\n",
     "    answer = generate_simple_trend_text(df, pair_list)\n",
     "\n",
     "    return {\n",
